--- a/notebooks/environment.yml
+++ b/notebooks/environment.yml
@@ -4,6 +4,7 @@ channels:
   - pyviz
 dependencies:
   - python=3.7
+  - nodejs
   - numpy
   - ipyleaflet
   - xarray
@@ -15,6 +16,7 @@ dependencies:
   - bqplot
   - scipy
   - notebook
+  - ipykernel
   - tqdm
   - hvplot
   - geoviews
